Update Christian Murphy - IT 2320 - Lab 8.html

--- a/Lab8/Christian Murphy - IT 2320 - Lab 8.html
+++ b/Lab8/Christian Murphy - IT 2320 - Lab 8.html
@@ -48,7 +48,7 @@ $('#billState option[value=Nothing]').attr('selected','selected');
 
 });
 
-//Comments
+//Leave a Comment
 $('#comment').keyup(function () {
 var max = 250;
 var len = $(this).val().length;
